--- a/_layout/default.html
+++ b/_layout/default.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://user-images.githubusercontent.com/60224159/178119492-91d3cc70-a88f-4b9a-94a0-ca7b68b1d861.png">
 	</head>
 <link href="https://software-hardware-codesign.github.io/AVR-Sandbox/index.html" rel="import" />
 </html>
